tests/fail/matching/different binders order.mmu
(sort s )
(sort t )
(term a ((y t ())(x s ())) (s ())